@startuml Objects

' =========================
'  Skin
' =========================

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0
skinparam Linetype ortho

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Classes
' =========================

interface MapObject {
    +getPosition() : Vector2dc
    +getHitbox() : double
    +isAlive() : boolean
    +getName() : String
}

abstract AbstractMapObject {
    #getWritablePosition() : Vector2dc
}

interface Movable {
    +updatePosition(double deltaSeconds) : void
    +getDirection() : Vector2dc
    +getSpeed() : double
}

abstract AbstractMovable {
    #setDirection(Vector2dc direction) : void
}

interface Entity {
    +getCurrentHealth() : double
    +getMaxHealth() : double
    +takeDamage(double dmg) : void
    +getWeapons() : Set<Weapon>
    +addWeapon(Weapon p) : void
    +canTakeDamage() : boolean
}

abstract AbstractEntity {
    {abstract} #alterDirection() : Vector2dc
    #canTakeDamage() : boolean
    #setHealth() : void
    #setMaxHealth() : void
}

AbstractMovable .right.|> Movable
AbstractMapObject .right.|> MapObject
AbstractEntity .right.|> Entity

AbstractMovable -up-|> AbstractMapObject
AbstractEntity -up-|> AbstractMovable

Movable -up-|> MapObject
Entity -up-|> Movable

@enduml 